--- a/public/crud/assets/css/style.css
+++ b/public/crud/assets/css/style.css
@@ -45,7 +45,7 @@ input[type="submit"]  {
 	width: 50px;
 	height: 50px;
 	vertical-align: middle !important;
-} 
+}
 
 .wrap-table table tbody tr td:first-child{
 	width: 30px !important;
@@ -53,4 +53,16 @@ input[type="submit"]  {
 .wrap-table table tbody tr td:last-child{
 	text-align: right;
 	width: 160px;
+}
+.single-student img{
+    widows: 200px;
+    height: 200px;
+    margin:auto;
+    border: 10px solid #fff;
+    border-radius: 50%;
+    display: block;
+}
+.single-student h2{
+    text-align: center;
+    margin: 20px auto;
 }
